# NPlug

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  license.txt  readme.md
.github/: FUNDING.yml
.github/workflows/: ci-build-native.yml  ci-nplug_proxy.yml  ci-nplug_validator.yml  ci-publish_nplug_proxy.yml  ci-publish_nplug_validator.yml  ci.yml
doc/: readme.md
ext/: CMake-Build-Platforms.ps1
ext/nplug-proxy/: CMakeLists.txt  build_nplug_proxy.ps1  plugin.cpp  update-dotnet-host.ps1
ext/nplug-proxy/lib/win-arm64/: libnethost.lib
ext/nplug-proxy/lib/win-x64/: libnethost.lib
ext/nplug-validator/: CMakeLists.txt  build_nplug_validator.ps1  nplug_validator_patch_files.ps1
ext/nplug-validator/nplug_validator/: nplug_validator.cpp
ext/vst/: build_nplug_validator.ps1  nplug_validator_patch_files.ps1
ext/vst/nplug_validator/: nplug_validator.cmake  nplug_validator.cpp
img/: nplug_banner.pdn
samples/: Directory.Build.props  Directory.Build.targets
samples/NPlug.SimpleDelay/: SimpleDelayController.cs  SimpleDelayModel.cs  SimpleDelayPlugin.cs  SimpleDelayProcessor.cs
samples/NPlug.SimpleProgramChange/: NPlug.SimpleProgramChange.csproj  SimpleProgramChangeController.cs  SimpleProgramChangeModel.cs  SimpleProgramChangePlugin.cs  SimpleProgramChangeProcessor.cs
scripts/: CMake-Build-Platforms.ps1
src/: Directory.Build.props  Directory.Packages.props  NPlug.samples.targets  NPlug.sln  NPlug.sln.DotSettings  NPlug.slnx  dotnet-releaser.toml  global.json
src/NPlug/: AudioAttributeList.cs  AudioBoolParameter.cs  AudioBusBuffers.cs  AudioBusData.cs  AudioBusDirection.cs  AudioBusFlags.cs  AudioBusInfo.cs  AudioBusMediaType.cs  AudioBusRoutingInfo.cs  AudioBusType.cs  AudioChord.cs  AudioContextMenu.cs  AudioContextMenuAction.cs  AudioContextMenuItem.cs  AudioContextMenuItemFlags.cs  AudioController.Midi.cs  AudioController.Parameters.cs  AudioController.ProgramLists.cs  AudioController.Units.cs  AudioController.cs  AudioControllerAutomationStates.cs  AudioControllerClassInfo.cs  AudioControllerHost.cs  AudioControllerKeySwitchInfo.cs  AudioControllerKeySwitchTypeId.cs  AudioControllerKnobModes.cs  AudioControllerRepresentationInfo.cs  AudioControllerSetup.cs  AudioEvent.cs  AudioEventFlags.cs  AudioEventKind.cs  AudioEventList.cs  AudioEvents.cs  AudioFrameRate.cs  AudioFrameRateFlags.cs  AudioHostApplication.cs  AudioInputOutputMode.cs  AudioMessage.cs  AudioMidiControllerNumber.cs  AudioMidiControllerNumberExtension.cs  (+101 more)
src/NPlug.CodeGen/: CodeGenerator.cs  NPlug.CodeGen.csproj  Program.cs
src/NPlug.HelloWorldPlugin/: EntryPoint.cs  HelloWorldController.cs  HelloWorldModel.cs  HelloWorldPlugin.cs  HelloWorldProcessor.cs  NPlug.HelloWorldPlugin.csproj
src/NPlug.NativeProxy/: CMakeLists.txt  NPlug.NativeProxy.msbuildproj  build_nplug_native_proxy.ps1  plugin.cpp
src/NPlug.Proxy/: AudioPluginProxy.cs  CMakeLists.txt  NPlug.Proxy.csproj  NPlug.Proxy.msbuildproj  NPlug.Proxy.nuspec  build_nplug_proxy.ps1  plugin.cpp  readme.md
src/NPlug.Proxy/package/: NPlug.Proxy.props
src/NPlug.Tests/: BasicPluginValidation.cs  Class1Tests.cs  NPlug.Tests.csproj  TestParameters.cs  TestSamplePlugins.cs
src/NPlug.Tests/Properties/: launchSettings.json
src/NPlug.Tests/Snapshots/: TestSamplePlugins.TestSimpleDelay.verified.txt  TestSamplePlugins.TestSimpleProgramChangePlugin.verified.txt
src/NPlug.Validator/: AudioPluginValidator.cs  Class1.cs  NPlug.Validator.csproj  readme.md
src/NPlug.Validator/Properties/: launchSettings.json
src/NPlug/Backend/: IAudioAttributeListBackend.cs  IAudioContextMenuBackend.cs  IAudioEventListBackend.cs  IAudioMessageBackend.cs  IAudioParameterChangesBackend.cs  IAudioParameterValueQueueBackend.cs
src/NPlug/Helpers/: AudioHelper.cs  MathHelper.cs  XxHash3.cs  XxHash64.State.cs  XxHashShared.cs
src/NPlug/IO/: PortableBinaryReader.cs  PortableBinaryWriter.cs
(+144 files in other folders)
